页面接口添加功能，还没有实现接口调用

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!--<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=46fa9967a0adb652e0e9030aa4c47c16"></script>-->
 </head>
+<style>
+  div {
+    cursor: default;
+  }
+</style>
 
 <body>
   <app-root>Loading...</app-root>
