--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=46fa9967a0adb652e0e9030aa4c47c16"></script> -->
+   <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=46fa9967a0adb652e0e9030aa4c47c16"></script> 
 </head>
 <style>
   div {
